# PEZ-ServerMonitor

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-test.yaml  ci.yaml
src/: config_parser.py  constants.py  container_info.py  containers.py  cpu.py  cpu_info.py  disk_info.py  disks.py  exceptions.py  latency.py  latency_info.py  main.py  mem_info.py  memory.py  network_info.py  networking.py  process_info.py  processes.py  processes_info.py  services.py  services_info.py  system.py  system_info.py  utils.py
src/config/: config_parser.py  constants.py  default_config.py
src/core/: containers.py  cpu.py  disks.py  latency.py  memory.py  networking.py  processes.py  services.py  system.py
src/utilities/: utils.py
sysinformer/: main.py
sysinformer/config/: config_parser.py  default_config.py
sysinformer/core/: containers.py  cpu.py  disks.py  latency.py  memory.py  networking.py  processes.py  services.py  system.py
sysinformer/utilities/: exceptions.py
tests/: test_config_parser.py  test_containers.py  test_cpu.py  test_disk_info.py  test_disks.py  test_latency.py  test_memory.py  test_networking.py  test_processes.py  test_services.py  test_system.py
tests/configs/: malformed_config.yaml
